--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <form class="convertForm">
-    <label>Ampount: </label>
+    <label>Amount: </label>
     <input type="number" name="amount"/>
 
     <select name="exchange">
